# bare-gtk

./: CMakeLists.txt  README.md  binding.c  index.js  package.json
.github/workflows/: prebuild.yml  test.yml
lib/: runtime.c  widget.h  widget.js  window.h  window.js
